# Programming_course_1

./: .gitignore  README.md
practicum_prg_1/: 2  2.c  3  3.c  README.md
practicum_prg_10/: README.md  func.c  header.h  lab10.c
practicum_prg_12/: 10.c  func.c  head.h
practicum_prg_13/: CMakeLists.txt  Makefile
practicum_prg_13/src/: 10.c
practicum_prg_14/: 3.c  5.c
practicum_prg_2/: 10  10.c  11  11.c  7  7.c  8  8.c  9  9.c  README.md
practicum_prg_3/: 7  7.c  README.md
practicum_prg_4/: 7  7.c  8  8.c  README.md
practicum_prg_5/: README.md  lab_5-1  lab_5-1.c  lab_5-2  lab_5-2.c
practicum_prg_6/: README.md  lab_6-1  lab_6-1.c  lab_6-2  lab_6-2.c  lab_6-3  lab_6-3.c
practicum_prg_7/: README.md  lab_7-1  lab_7-1.c
practicum_prg_8/: README.md  lab_8-1  lab_8-1.c
practicum_prg_9/: README.md  file.txt  mergesort.py  sort.c
